# mTrak

./: Cargo.toml  README.md  test.mtrak
sandbox/: test.mtrak
src/: cli.rs  main.rs
src/data/: config.rs  effect.rs  mod.rs  note.rs  pattern.rs  project.rs  timeline.rs
src/tui/: app.rs  binding_fields.rs  constants.rs  keymap.rs  mod.rs  overlay.rs
src/tui/views/: header.rs  mod.rs  sidebar.rs  timeline.rs
src/util/: mod.rs  strings.rs  timers.rs
