[package]
name = "m_trak"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "mtrak"
path = "src/main.rs"
[dependencies]
clap_derive = { version = "4.0.0-rc.1" }
bincode = { version = "2.0.1", features = ["serde"] }
cpal = "0.16.0"
crossterm = "0.29.0"
hound = "3.5.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
clap = "4.5.45"
